--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -1,49 +1,53 @@
-
 footer {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 1rem 2rem;
+  box-sizing: border-box;
+}
+
+footer.theme-classic a i {
+  color: var(--text-light);
 }
 
 footer.theme-classic {
-    background-color: var(--blue-dark);
-    color: var(--light);
-    font-family: 'ubuntu';
+  background-color: var(--blue-dark);
+  color: var(--light);
+  font-family: "ubuntu";
 }
 
 footer.theme-color {
-    background-color: var(--bg-color);
-    color: var(--text-light);
-    font-family: 'playwrite';
+  background-color: var(--bg-color);
+  color: var(--text-light);
+  font-family: "playwrite";
 }
 
 footer.theme-dark {
-    background-color: rgba(255, 255, 255, 0.04);
+  background-color: rgba(255, 255, 255, 0.04);
 }
 
-.contact {
-    display: flex;
-    align-items: center;
+.contact a {
+  display: flex;
+  align-items: center;
 }
 
-
-.contact.theme-classic {
-    gap: 1rem;
+.contact a p {
+  margin: 0;
 }
 
-.contact.theme-color {
-    gap: 1rem;
+.contact.theme-classic a,
+.contact.theme-color a {
+  color: var(--text-light);
+  gap: 1rem;
 }
 
-.contact.theme-dark {
-    gap: 0.5rem;
+.contact.theme-dark a {
+  gap: 0.5rem;
 }
-
 
 @media screen and (min-width: 768px) {
-
-    footer.theme-dark {
-        display: none;
-    }
+  footer.theme-dark {
+    display: none;
+  }
 }
