--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -1,253 +1,267 @@
 body > header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: var(--box-shadow);
-    width: 97vw;
-    transition: all 1s;
-    z-index: 10;
-    animation: slideInDown;
-    animation-duration: 1s;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: var(--box-shadow);
+  width: 100vw;
+  transition: all 1s;
+  z-index: 10;
+  animation: slideInDown;
+  animation-duration: 1s;
+  box-sizing: border-box;
 }
 
 body > header img {
-    width: 30px;
+  width: 30px;
 }
 
 .nom a {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
-
 .nav-header {
-    display: none;
+  display: none;
 }
 
 ul {
-    list-style: none;
-    display: flex;
-    gap: 1rem;
-    padding: 0;
-    margin: 0;
+  list-style: none;
+  display: flex;
+  gap: 1rem;
+  padding: 0;
+  margin: 0;
 }
 
 a {
-    text-decoration: none;
-    border: 1px solid var(--none);
-    transition: all 0.5s;
+  text-decoration: none;
+  border: 1px solid var(--none);
+  transition: all 0.5s;
 }
 
 a:hover {
-    border-bottom: 1px solid var(--text-light);
+  border-bottom: 1px solid var(--text-light);
 }
 
 .icones {
-    display: flex;
-    gap: 1rem;
-    align-items: center;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
 }
 
 i {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
+}
+
+.nav-mobile {
+  padding: 1rem 1rem;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+
+.nav-mobile ul {
+  display: flex;
+  flex-direction: column;
+  font-size: 2rem;
+}
+
+.nav-mobile.theme-dark button i {
+  color: var(--text-light);
 }
 
 /* ----------------THEME CLASSIC----------------- */
 
-
 body.theme-classic > header {
-    width: 97%;
-    padding: 1rem 2rem;
-    position: fixed;
-    background-color: var(--blue-dark);
-    font-family: 'ubuntu';
+  padding: 1rem 2rem;
+  position: fixed;
+  background-color: var(--blue-dark);
+  font-family: "ubuntu";
 }
 
 .nom.theme-classic a,
 a.theme-classic,
 i.theme-classic {
-    color: var(--light);
+  color: var(--light);
 }
 
-
-
 .nav-mobile.theme-classic {
-    background-color: var(--light);
-    height: 100vh;
-    width: 75vw;
+  background-color: var(--light);
+  height: 100vh;
+  width: 75vw;
 }
 
 .nav-mobile.theme-classic a {
-    color: var(--text-dark);
+  color: var(--text-dark);
 }
 
 @media screen and(min-width: 768px) {
-    body.theme-classic > header {
-        height: 80px;
-    }
+  body.theme-classic > header {
+    height: 80px;
+  }
 }
 
 /* ----------------THEME COLOR----------------- */
 
-
 body.theme-color > header {
-    position: fixed;
-    align-items: flex-start;
-    padding: 1rem;
-    background-image: url(../img/header-color.png);
-    box-shadow: none;
-    background-size: 100% 100%;
-    height: 100px;
-    transition: all 0.1s;
-    font-family: 'playwrite';
+  position: fixed;
+  align-items: flex-start;
+  padding: 1rem;
+  background-image: url(../img/header-color.png);
+  box-shadow: none;
+  background-size: 120% 120%;
+  height: 100px;
+  transition: all 0.1s;
+  font-family: "playwrite";
 }
 
 body.theme-color > header.minimized {
-    position: fixed;
-    padding: 0.8rem 2rem;
-    background-image: none;
-    height: 40px;
-    background-color: var(--bg-color);
-    box-shadow: var(--box-shadow);
+  position: fixed;
+  padding: 0.8rem 2rem;
+  background-image: none;
+  height: 60px;
+  background-color: var(--bg-color);
+  box-shadow: var(--box-shadow);
 }
 
 .nom.theme-color a,
 a.theme-color,
 i.theme-color {
-    color: var(--text-light);
+  color: var(--text-light);
 }
 
 .icones.theme-color {
-    justify-content: center;
+  justify-content: center;
 }
 
 .nav-mobile.theme-color {
-    background-color: var(--text-light);
-    height: 100vh;
-    width: 75vw;
+  background-color: var(--text-light);
+  height: 100vh;
+  width: 75vw;
 }
 
 .nav-mobile.theme-color a {
-    color: var(--text-dark);
+  color: var(--text-dark);
 }
 
-@media screen and (min-width:768px) {
-    body.theme-color > header {
-        height: 150px;
-        padding: 2rem 2rem;
-    }
+@media screen and (min-width: 768px) {
+  body.theme-color > header {
+    height: 150px;
+    padding: 2rem 2rem;
+  }
 }
-
 
 /* ----------------THEME DARK----------------- */
 
 body.theme-dark > header {
-    padding: 1rem 0.5rem;
-    position: fixed;
-    top: 0;
-    background-color: rgba(255, 255, 255, 0.8);
-    z-index: 3;
+  width: 100%;
+  padding: 1rem 0.5rem;
+  position: fixed;
+  top: 0;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: 3;
 }
 
-body.theme-dark > header a, body.theme-dark > header i {
-    color: var(--dark-blue);
+body.theme-dark > header a,
+body.theme-dark > header i {
+  color: var(--dark-blue);
 }
 
 .nom.theme-dark {
-    font-family: 'michroma';
-    padding-bottom: 0.5rem;
+  font-family: "michroma";
+  padding-bottom: 0.5rem;
 }
 
 .nom.theme-dark a,
 a.theme-dark,
 i.theme-dark {
-    color: var(--text-light);
+  color: var(--text-light);
 }
 
 .ul.theme-dark {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .nav-mobile.theme-dark {
-    background-color: var(--dark-blue);
-    height: 100vh;
-    width: 75vw;
+  background-color: var(--dark-blue);
+  height: 100vh;
+  width: 75vw;
 }
 
 .nav-mobile.theme-dark a {
-    color: var(--text-light);
+  color: var(--text-light);
 }
 
 .footer-theme-dark {
-    display: none;
+  display: none;
 }
 
 .footer-theme-dark .contact {
-    display: flex;
-    gap: 0.5rem;
+  display: flex;
+  gap: 0.5rem;
 }
 
-
 @media screen and (min-width: 768px) {
-    body.theme-dark > header {
-        position: fixed;
-        display: flex;
-        flex-direction: column;
-        top: 0;
-        right: 0;
-        height: 100vh;
-        grid-column: 12 / 13;
-        display: grid;
-        grid-template-rows: repeat(12,1fr);
-        padding: 1rem;
-        width: 10%;
-        background-color: rgba(255, 255, 255, 0.04);
-    }
+  body.theme-dark > header {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    grid-column: 12 / 13;
+    display: grid;
+    grid-template-rows: repeat(12, 1fr);
+    padding: 1rem;
+    width: 180px;
+    background-color: rgba(255, 255, 255, 0.04);
+  }
 
-    body.theme-dark > header a, body.theme-dark > header i {
-        color: var(--text-light);
-    }
+  body.theme-dark > header a,
+  body.theme-dark > header i {
+    color: var(--text-light);
+  }
 
-    .nav-header {
-        grid-row-start: 4;
-        display: flex;
-        justify-content: flex-end;
-    }
+  .nav-header {
+    grid-row-start: 4;
+    display: flex;
+    justify-content: flex-end;
+  }
 
-    .nav-header.theme-dark ul {
-        display: flex;
-        flex-direction: column;
-        text-align: right;
-    }
-    
-    .logo.theme-dark {
-        grid-row: 2/3;
-        text-align: right;
-    }
+  .nav-header.theme-dark ul {
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+  }
 
-    .icones.theme-dark {
-        grid-row: 1/2;
-        justify-self: flex-end;
-    }
+  .logo.theme-dark {
+    grid-row: 2/3;
+    text-align: right;
+  }
 
-    .logo.theme-dark a {
-        flex-direction: column;
-    }
+  .icones.theme-dark {
+    grid-row: 1/2;
+    justify-self: flex-end;
+  }
 
-    .menu-mobile {
-        display: none;
-    }
+  .logo.theme-dark a {
+    flex-direction: column;
+  }
 
-    .footer-theme-dark {
-        grid-row: 11/12;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-        font-family: 'michroma';
-    }
+  .menu-mobile {
+    display: none;
+  }
 
-    .footer-theme-dark .contact {
-        display: flex;
-        gap: 0.5rem;
-    }
+  .footer-theme-dark {
+    grid-row: 11/12;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: flex-end;
+    font-family: "michroma";
+  }
+
+  .footer-theme-dark .contact {
+    display: flex;
+    gap: 0.5rem;
+  }
 }
