--- a/src/assets/css/modale-detail.css
+++ b/src/assets/css/modale-detail.css
@@ -1,126 +1,218 @@
+.border-dialog {
+  box-shadow: var(--box-shadow);
+  height: 85%;
+  grid-column: 1/5;
+  align-self: center;
+  padding: 1rem;
+  box-sizing: border-box;
+}
+
 .dialog-details-projets {
-    background-color: var(--light);
-    box-shadow: var(--box-shadow);
-    height: 75%;
-    grid-column: 1/5;
-    margin: 2rem;
-    align-self: center;
-    border-radius: 20px;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  background-color: var(--light);
+  height: 100%;
+  width: 100%;
+  border-radius: 20px;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  position: relative;
+  box-sizing: border-box;
+  overflow-y: auto;
 }
 
 .project-details-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 2rem;
-    padding: 0 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 2rem;
+  padding: 0 1rem;
 }
 
-.project-details-container h3 {
-    margin: 0 auto;
+.top-dialog {
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: 1fr;
+}
+
+.title-stack {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.title-stack h3 {
+  margin: 0;
+}
+
+.title-stack .list-details {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1;
 }
 
 .img-modale-projet {
-    max-width: 90%;
-    margin: 0 auto;
+  max-width: 100%;
+  margin: 0 auto;
 }
 
 .btn-close {
-    align-self: flex-end;
+  align-self: flex-end;
 }
 
 .btns-dialog {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-}
-
-.list-details {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .link-visitez {
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
+  display: flex;
+  flex-direction: column;
+}
+
+/* --------------------THEME CLASSIC-------------------*/
+
+.border-dialog.theme-classic {
+  background-image: url(../img/fond-accueil-2.png);
+  background-size: auto 100%;
+  border-radius: 20px;
+}
+
+.dialog-details-projets.theme-classic {
+  border: 4px solid var(--blue-dark);
 }
 
 .img-modale-projet.theme-classic {
-    border: 1px solid var(--dark);
-    border-radius: 20px;
+  border: 1px solid var(--dark);
+  border-radius: 20px;
 }
 
-.dialog-details-projets.theme-classic a, .dialog-details-projets.theme-color a {
-    color: var(--dark);
-    border-bottom: 1px solid var(--none);
-    transition: all 0.3s;
+.dialog-details-projets.theme-classic a,
+.dialog-details-projets.theme-color a {
+  color: var(--dark);
+  border-bottom: 1px solid var(--none);
+  transition: all 0.3s;
+  width: fit-content;
 }
 
-.dialog-details-projets.theme-classic a:hover, .dialog-details-projets.theme-color a:hover {
-    border-bottom: 1px solid var(--dark);
+.dialog-details-projets.theme-classic a:hover,
+.dialog-details-projets.theme-color a:hover {
+  border-bottom: 1px solid var(--dark);
+}
+
+.title-stack.theme-classic .list-details li {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  align-items: center;
+  max-width: 90px;
+  text-align: center;
+}
+
+.title-stack.theme-classic .list-details li img {
+  width: 60px;
+  height: 60px;
+}
+
+/* --------------------THEME COLOR-------------------*/
+
+.border-dialog.theme-color {
+  background-image: url(../img/motifs-couleurs.png);
+  background-size: 100%;
+  border-radius: 50px;
+}
+
+.dialog-details-projets.theme-color {
+  border: 2px solid var(--orange-light);
+  border-radius: 50px;
 }
 
 .img-modale-projet.theme-color {
-    border: 1px solid var(--dark);
-    border-radius: 50px;
+  border: 1px solid var(--dark);
+  border-radius: 50px;
 }
 
+.title-stack.theme-color .list-details li {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  align-items: center;
+  max-width: 90px;
+  text-align: center;
+}
+
+.title-stack.theme-color .list-details li img {
+  width: 60px;
+  height: 60px;
+}
+
+/* --------------------THEME DARK-------------------*/
+
 .theme-dark a {
-    color: var(--light);
-    border-bottom: 1px solid var(--none);
-    transition: all 0.3s;
+  color: var(--light);
+  border-bottom: 1px solid var(--none);
+  transition: all 0.3s;
 }
 
 .theme-dark a:hover {
-    border-bottom: 1px solid var(--light);
+  border-bottom: 1px solid var(--light);
 }
 
 .dialog-details-projets.theme-dark {
-    background-color: var(--dark);
-    border: 2px solid var(--light);
-    border-radius: 0;
+  background-color: var(--dark);
+  border: 2px solid var(--light);
+  border-radius: 0;
 }
 
 .img-modale-projet.theme-dark {
-    border: 1px solid var(--light);
-    border-radius: 0px;
+  border: 1px solid var(--light);
+  border-radius: 0px;
 }
 
-
-@media screen and (min-width: 600px){
-    .img-modale-projet {
-        max-width: 70%;
-        margin: 0 auto;
-    }
+.title-stack.theme-dark .list-details {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 
-
-@media screen and (min-width: 768px){
-    .dialog-details-projets {
-        grid-column: 2 / 4;
-    }
+.title-stack.theme-dark .list-details li {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  padding: 0.5rem;
+  background-color: rgba(255, 255, 255, 0.05);
 }
 
-@media screen and (min-width: 1024px){
-    .dialog-details-projets {
-        padding: 2rem;
-        grid-column: 3 / 11;
-    }
+.title-stack.theme-dark .list-details li img {
+  width: 24px;
+  height: 24px;
 }
 
-@media screen and (min-width: 1200px){
-    .img-modale-projet {
-        max-width: 40%;
-        margin: 0 auto;
-    }
+@media screen and (min-width: 768px) {
+  .border-dialog {
+    grid-column: 2 / 4;
+  }
+}
 
-    .project-details-container{
-        padding: 0 4rem;
-    }
+@media screen and (min-width: 1024px) {
+  .border-dialog {
+    padding: 2rem;
+    grid-column: 3 / 11;
+  }
+
+  .top-dialog {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .btns-dialog {
+    width: calc(100% - 2rem);
+    position: absolute;
+    bottom: 1rem;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project-details-container {
+    padding: 0 4rem;
+  }
 }
